--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,18 +2,15 @@
   .side_bar__user-name
     .side_bar__user-name__list
       .side_bar__user-name__list__left
-        = current_user.name
+        masa
       %ul.side_bar__user-name__list__right
         %li.side_bar__user-name__list__right__pencil
-          = link_to "#" do
-            = icon('fas', 'edit')
+          = icon('fas', 'edit')
         %li.side_bar__user-name__list__right__fog
-          = link_to edit_user_path(current_user) do
-            = icon('fas', 'cog')
+          = icon('fas', 'cog')
   .side_bar__group-list
     .side_bar__group-list__message
-      = link_to "#" do
-        .side_bar__group-list__message__group-name
-          techcamp
-        .side_bar__group-list__message__new-message
-          まだメッセージがありません
+      .side_bar__group-list__message__group-name
+        techcamp
+      .side_bar__group-list__message__new-message
+        まだメッセージがありません
