--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.chat_main__message-list__messages
+.chat_main__message-list__messages{data: {message: {id: message.id}}}
   .chat_main__message-list__messages__top
     .chat_main__message-list__messages__top__left
       = message.user.name
